--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,5 +4,7 @@
 	"Salary": "Salary",
 	"City": "City",
 	"PublicationDate": "Publication Date",
-	"Views": "Views"
-}
+	"Views": "Views",
+	"million": "million",
+	"millions": "millions"
+  }
